--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -234,16 +234,16 @@ html, body {
   grid-column: 1 / -1;
   text-align: center;
 }
-.paginator > a, .paginator > i {
+.paginator > a, .paginator > i, .paginator > p {
   display: inline-block;
   border: 0;
   border-radius: 6px;
   margin: 0 1px 0 1px;
   padding: 5px 15px 5px 15px;
   text-align: center;
+  color: #FAFAFA;
 }
 .paginator > a {
-  color: #FAFAFA;
   background-color: #639bff;
   transition: all 0.125s ease-in-out;
 }
