--- a/boyoblue/templates/boyoblue/about.html
+++ b/boyoblue/templates/boyoblue/about.html
@@ -10,11 +10,11 @@
     </div>
     <p class="text-l text-dark">Who made BoyoBlue?</p>
     <div class="card card divided">
-      <p class="text-m text-dark">Bryan</p>
+      <p class="text-m text-dark">Bryan Bean</p>
       <p class="text-s text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="divider" style="background-color: #FAFAFA;"></div>
-      <p class="text-m text-dark">Peter</p>
-      <p class="text-s text-dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="text-m text-dark">Peter Lavigne (<a href="https://github.com/Peter-Lavigne" class="text-dark text-link">Github</a> | <a href="https://www.linkedin.com/in/peter-lavigne-a8917114b" class="text-dark text-link">LinkedIn</a>)</p>
+      <p class="text-s text-dark">Peter is a computer science undergrad at Northeastern University. He likes all things programming language and data science related. With one internship under his belt, he is currently looking for another this Spring. In addition to coding, he also likes making pixel art, playing video games, creating music, playing the board game Go, and running.</p>
     </div>
     <p class="text-l text-dark">Attributions</p>
     <div class="card card-divided">
