--- a/boyoblue/templates/account/signup.html
+++ b/boyoblue/templates/account/signup.html
@@ -1,21 +1,35 @@
-{% extends "account/base.html" %}
+{% extends 'boyoblue/core.html' %}
+{% block title %} Sign up{% endblock %}
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block body %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="content">
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+  <h1>Sign Up</h1>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+  <p>Already have an account? Then please <a href="/accounts/login/">sign in</a>.</p>
+
+  <form class="signup" id="signup_form" method="post" action="/accounts/signup/">
+    {% csrf_token %}
+    <p>
+      <label for="id_email">E-mail:</label>
+      <input type="email" name="email" placeholder="E-mail address" required id="id_email">
+    </p>
+    <p>
+      <label for="id_password1">Password:</label>
+      <input type="password" name="password1" placeholder="Password" required id="id_password1">
+    </p>
+    <p>
+      <label for="id_password2">Password (again):</label>
+      <input type="password" name="password2" placeholder="Password (again)" required id="id_password2">
+    </p>
+
+    <button type="submit">Sign Up &raquo;</button>
+  </form>
+
+</div>
 
 {% endblock %}
+
