--- a/boyoblue/templates/account/password_reset.html
+++ b/boyoblue/templates/account/password_reset.html
@@ -1,26 +1,32 @@
 {% extends 'boyoblue/core.html' %}
-{% block title %} Sign up{% endblock %}
+{% block title %} Password reset{% endblock %}
 
 {% load i18n %}
 
 {% block body %}
-<div class="content">
-
-  <h1>Password Reset</h1>
-
-
-  <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
-
-  <form method="POST" action="/accounts/password/reset/" class="password_reset">
-    {% csrf_token %}
-    <p>
-      <label for="id_email">E-mail:</label>
-      <input type="email" name="email" size="30" placeholder="E-mail address" required id="id_email">
-    </p>
-    <input type="submit" value="Reset My Password"/>
-  </form>
-
-  <p>Please contact us if you have any trouble resetting your password.</p>
-
-</div>
+  <div class="form_content">
+    <div class="full-width">
+      <p class="text-l text-dark">Password reset</p>
+    </div>
+    <div class="full-width">
+      <p class="text-s text-dark">Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.</p>
+    </div>
+    <form method="POST" action="/accounts/password/reset/" class="password_reset">
+      {% csrf_token %}
+      <div class="form_content_fields">
+        <div class="labels">
+          <label for="id_email">Email:</label>
+        </div>
+        <div class="fields">
+          <input type="email" id="id_email" name="email" placeholder="Email address" required>
+        </div>
+      </div>
+      <div class="full-width">
+        <button type="submit">Reset my password</button>
+      </div>
+    </form>
+    <div class="full-width">
+      <p class="text-s text-dark">Please contact us if you have any trouble resetting your password.</p>
+    </div>
+  </div>
 {% endblock %}
