--- a/boyoblue/templates/account/signup.html
+++ b/boyoblue/templates/account/signup.html
@@ -4,32 +4,32 @@
 {% load i18n %}
 
 {% block body %}
-
-<div class="content">
-
-  <h1>Sign Up</h1>
-
-  <p>Already have an account? Then please <a href="/accounts/login/">sign in</a>.</p>
-
-  <form class="signup" id="signup_form" method="post" action="/accounts/signup/">
-    {% csrf_token %}
-    <p>
-      <label for="id_email">E-mail:</label>
-      <input type="email" name="email" placeholder="E-mail address" required id="id_email">
-    </p>
-    <p>
-      <label for="id_password1">Password:</label>
-      <input type="password" name="password1" placeholder="Password" required id="id_password1">
-    </p>
-    <p>
-      <label for="id_password2">Password (again):</label>
-      <input type="password" name="password2" placeholder="Password (again)" required id="id_password2">
-    </p>
-
-    <button type="submit">Sign Up &raquo;</button>
-  </form>
-
-</div>
-
+  <div class="form_content">
+    <div class="full-width">
+      <p class="text-l text-dark">Sign up</p>
+    </div>
+    <div class="full-width">
+      <p class="text-s text-dark">Already have an account? Then please <a href="/accounts/login/">log in</a>.</p>
+    </div>
+    <form class="signup" id="signup_form" method="post" action="/accounts/signup/">
+      {% csrf_token %}
+      <div class="form_content_fields">
+        <div class="labels">
+          <label for="id_login">Username:</label>
+          <label for="id_email">Email:</label>
+          <label for="id_password1">Password:</label>
+          <label for="id_password2">Password:</label>
+        </div>
+        <div class="fields">
+          <input type="text" id="id_login" name="login" placeholder="Username" autofocus="autofocus" maxlength="150" required>
+          <input type="email" id="id_email" name="email" placeholder="Email address" required>
+          <input type="password" id="id_password1" name="password1" placeholder="Password" required>
+          <input type="password" id="id_password2" name="password2" placeholder="Verify password" required>
+        </div>
+      </div>
+      <div class="full-width">
+        <button type="submit">Sign up</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
-
