--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -333,7 +333,7 @@ html, body {
 .form_content .full-width > button {
   padding: 10px;
 }
-.form_content label, .form_content input, .form_content a, .form_content button {
+.form_content label, .form_content input, .form_content a, .form_content button, .form_content textarea {
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
   text-decoration: none;
@@ -349,7 +349,7 @@ html, body {
   color: #639bff;
   text-decoration: underline dotted #639bff;
 }
-.form_content input, .form_content button {
+.form_content input, .form_content button, .form_content textarea {
   border: 0;
   border-radius: 6px;
   padding-left: 10px;
@@ -371,11 +371,11 @@ html, body {
 }
 .fields { grid-area: fields; }
 .labels { grid-area: labels; }
-.fields input, .labels label {
+.fields input, .fields textarea, .labels label {
   width: 100%;
   margin: 5px 0 5px 0;
 }
-.fields input {
+.fields input, .fields textarea {
   padding: 10px;
   background-color: #E5E5E5;
   width: 180px;
