--- a/boyoblue/templates/account/login.html
+++ b/boyoblue/templates/account/login.html
@@ -10,7 +10,7 @@
       <p class="text-l text-dark center">Log in</p>
     </div>
     <div class="full-width">
-      <p class="text-s text-dark center">{% blocktrans with site.name as site_name %}Please sign in with one of your existing third party accounts. Or, <a class="text-s text-dark text-link" href="{{ signup_url }}">sign up</a> for a BoyoBlue account and log in below:{% endblocktrans %}</p>
+      <p class="text-s text-dark center">Please sign in with one of your existing third party accounts. Or, <a class="text-s text-dark text-link" href="{{ signup_url }}">sign up</a> for a BoyoBlue account and log in below:</p>
     </div>
     <div class="full-width">
       <a href="/accounts/google/login/?process=login"><img src="/static/images/logos/google_auth.png" onmouseover="this.src='/static/images/logos/google_auth_hover.png'"
@@ -24,15 +24,15 @@
           <label for="id_password">Password:</label>
         </div>
         <div class="fields">
-          <input type="text" id="id_login" name="login" placeholder="Username" autofocus="autofocus" maxlength="150" required>
+          <input type="text" id="id_login" name="login" placeholder="Username" maxlength="150" required>
           <input type="password" id="id_password" name="password" placeholder="Password" required>
         </div>
       </div>
       <div class="full-width">
-        <button class="primaryAction" type="submit">{% trans "Log in" %}</button>
+        <button type="submit">{% trans "Log in" %}</button>
       </div>
       <div class="full-width">
-        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
       </div>
     </form>
   </div>
