Use jsdelivr for static assets

--- a/boyoblue/templates/boyoblue/core.html
+++ b/boyoblue/templates/boyoblue/core.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>BoyoBlue{% block title %}{% endblock %}</title>
-  <link rel="icon" type="image/png" href="/static/images/favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="/static/styles/reset.css"/>
+  <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/pataman3/boyoblue@v1/boyoblue/static/images/favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/pataman3/boyoblue@v1/boyoblue/static/styles/reset.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="/static/styles/stylesheet.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/pataman3/boyoblue@v1/boyoblue/static/styles/stylesheet.css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
 </head>
