--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -3,7 +3,7 @@
 <header class="header">
   <div id="header_logo">
     <a href="{% url 'home' %}">
-      <img src="/static/images/logo.svg" height="35px" width="35px">
+      <img src="https://cdn.jsdelivr.net/gh/pataman3/boyoblue@v1/boyoblue/static/images/logo.svg" height="35px" width="35px">
     </a>
   </div>
   
